# henyey

./: .gitignore  .review_test_list.txt  .scratch_poll.rs  CLAUDE.md  Cargo.toml  README.md  grafana-dashboard-spec.md  issue2218-comments.json  opencode.json  review_app_tests.txt  review_overlay_tests.txt
configs/: mainnet.toml  test-history-publish.toml  testnet.toml  validator-mainnet-rpc.toml  validator-mainnet.toml  validator-testnet.toml  watcher-testnet.toml
crates/invariant/: Cargo.toml  PARITY_STATUS.md  README.md
crates/invariant/src/: entry_valid.rs  lib.rs  sponsorship.rs  sub_entries.rs
crates/scp/: Cargo.toml  PARITY_STATUS.md  README.md
crates/scp/.serena/: project.yml
crates/scp/.serena/memories/: project_overview.md
crates/scp/src/: compare.rs  driver.rs  format.rs  lib.rs  nomination.rs  quorum.rs  quorum_config.rs  quorum_intersection.rs  scp.rs  slot.rs  test_utils.rs
crates/scp/src/ballot/: envelope.rs  mod.rs  state_machine.rs  statements.rs
crates/scp/src/quorum_intersection/: bit_set.rs  checker.rs  mod.rs  qbitset.rs  tarjan.rs
crates/scp/tests/: multi_node_simulation.rs  quorum_intersection_json.rs
crates/scp/tests/scp_parity_tests/: main.rs
docs/: LOCAL_MODE_PLAN.md  SIMULATION_PLAN.md  henyey-dashboard.json  henyey-monitoring-full.json  henyey-vs-core-dashboard.json  ledger-close-v2-design.md  metrics-mapping.md  perf-analysis-classic-tx-execution.md  perf-hypotheses.md  rs-soroban-env-typed-api-continuation.md  soroban-execution-optimization.md  supercluster-feasibility.md  testing.md  validation-fee-seq-analysis.md  (+1 more)
(+484 files in other folders)
