[package]
name = "henyey-invariant"
description = "Runtime invariant checks for henyey (stellar-core parity)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stellar-xdr.workspace = true
tracing.workspace = true
serde_json.workspace = true
regex = "1"

[dev-dependencies]
