[package]
name = "henyey-scp"
description = "Stellar Consensus Protocol implementation for henyey"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
stellar-strkey.workspace = true
henyey-common.workspace = true
henyey-crypto.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Utilities
parking_lot.workspace = true
hex.workspace = true
rand.workspace = true

[features]
# Exposes #[cfg(any(test, feature = "test-helpers"))] helpers (e.g.
# `Slot::test_set_fully_validated`, `SCP::test_clear_slot_fully_validated`)
# to downstream crates that need to drive SCP into specific states from
# their own integration tests. Not enabled in production.
test-helpers = []

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
